# todo-reminder

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.example.toml
.github/: dependabot.yml
.github/workflows/: binary-job.yml  build.yml  release.yml  test-job.yml  test.yml
ci-examples/: bitbucket-pipelines.yml  github-actions.yml  gitlab-ci.yml
src/: cli.rs  config.rs  languages.rs  main.rs  todo_analyzer.rs
src/output/: json.rs  mod.rs  table.rs
tests/: integration_tests.rs
tests/snapshots/: integration_tests__check_due_only_with_table_format.snap  integration_tests__check_format_only_with_table_format.snap  integration_tests__main_with_json_format.snap  integration_tests__main_with_table_format.snap
tests/test_files/: config.toml
tests/test_files/bash/: test.sh
tests/test_files/c/: test.c
tests/test_files/css/: test.css
tests/test_files/javascript/: test.js
tests/test_files/php/: test.php
tests/test_files/python/: test.py
tests/test_files/ruby/: test.rb
tests/test_files/rust/: test.rs
tests/test_files/rust_other/: no_due.rs  no_format.rs
