[package]
name = "todo-reminder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.41"
clap = { version = "4.5.46", features = ["derive"] }
colored = "3.0.0"
comfy-table = { version = "7.2.0", features = ["custom_styling"]}
insta = "1.43.1"
regex = "1.11.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.143"
streaming-iterator = "0.1"
toml = "0.9.5"
tree-sitter = "0.25.8"
tree-sitter-bash = "0.25.0"
tree-sitter-c = "0.24.1"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-css = "0.25.0"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-php = "0.24.2"
tree-sitter-python = "0.25.0"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.24.0"
tree-sitter-typescript = "0.23.2"
walkdir = "2.5.0"
